tests/negative/MicroJuvix/WrongReturnTypeTooManyArguments.mjuvix
module WrongReturnTypeTooManyArguments;

inductive A (B : Type) {
c : A B B;
};

end;
